# yolo-detector

./: .gitignore  README.md  demo.py  pyproject.toml  run.sh
app/: main.py
app/api/: yolo.py
app/models/: yolo.py
app/schemas/: constants.py  models.py
